--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ button {
 }
 
 .background,
+.background-image,
 .rectangle,
 .text,
 .rectangle li {
@@ -55,6 +56,7 @@ button {
 }
 
 .background,
+.background-image,
 .rectangle,
 .text {
   width: 100%;
@@ -75,6 +77,20 @@ button {
 .background {
   z-index: 4;
   background: url('images/bg.png') no-repeat;
+}
+
+.background-image {
+  position: absolute;
+  z-index: 5;
+}
+
+.background-image .back,
+.background-image .front {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all ease-in-out 1s;
 }
 
 .rectangle {
