--- a/style.css
+++ b/style.css
@@ -159,6 +159,11 @@
   transition: all .3s;
 }
 
+#atlo .pagination button svg {
+  width: 100%;
+  height: 100%;
+}
+
 #atlo .pagination button rect {
   fill: #666666 !important;
 }
