--- a/style.css
+++ b/style.css
@@ -333,3 +333,7 @@
 #atlo .tooltip .tooltip-text.active {
   opacity: 1;
 }
+
+.preload li:nth-of-type(1) { background: url('images/1.png') no-repeat -9999px -9999px; }
+.preload li:nth-of-type(2) { background: url('images/2.png') no-repeat -9999px -9999px; }
+.preload li:nth-of-type(3) { background: url('images/3.png') no-repeat -9999px -9999px; }
