--- a/style.css
+++ b/style.css
@@ -225,8 +225,12 @@
   margin-left: 0;
 }
 
-#atlo .content p {
+#atlo .content-text {
   margin: 50px 0;
+}
+
+#atlo .content-text h2 {
+  font-family: 'Merriweather', serif;
 }
 
 #atlo video {
