--- a/style.css
+++ b/style.css
@@ -272,12 +272,34 @@ svg#svg8532 {
 #atlo .tooltip {
   position: absolute;
   z-index: 6;
-  top: 10%;
-  left: 10%;
+  top: 100%;
+  left: 32%;
+  -webkit-box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
+  -moz-box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
+  box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
   opacity: 0;
   transition: opacity .6s;
 }
 
+#atlo .tooltip.active {
+  top: 62%;
+}
+
+#atlo .tooltip:before {
+  top: -30px;
+  left: 10%;
+  content:"\A";
+  border-style: solid;
+  border-width: 30px 0px 30px 30px;
+  border-color: transparent transparent transparent white;
+  position: absolute;
+}
+
+#atlo .tooltip.right:before {
+  left: calc(90% - 30px);
+  border-width: 30px 30px 30px 0;
+  border-color: transparent white transparent transparent;
+}
 
 #atlo .tooltip.active {
   opacity: 1;
@@ -307,13 +329,10 @@ svg#svg8532 {
 }
 
 #atlo .tooltip-text {
-  width: 625px;
+  max-width: 555px;
+  width: 100%;
   background: white;
-  -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.1);
-  -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.1);
-  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.1);
   padding: 15px;
-  opacity: 0;
   transition: all .6s;
 }
 
@@ -321,7 +340,8 @@ svg#svg8532 {
   position: relative;
   font-family: Merriweather, serif;
   font-size: 21px;
-  padding-left: 40px;
+  line-height: 2;
+  padding: 0 10px 0 40px;
 }
 
 #atlo .tooltip-text p:first-of-type:before {
@@ -333,6 +353,7 @@ svg#svg8532 {
   height: 24px;
   background: url('images/cite_begin.svg') no-repeat;
 }
+
 #atlo .tooltip-text p:first-of-type:after {
   content: '';
   display: inline-block;
@@ -369,19 +390,24 @@ svg#svg8532 {
   width: 48%;
 }
 
-.slider li div {
-  width: 24px;
-  height: 55px;
-  background: url(images/woman_gray.svg) no-repeat;
-  transition: background .5s;
+.slider li svg {
+  width: 22px;
+  height: 50px;
 }
 
-.slider .left div.highlighted {
-  background: url(images/woman_red.svg) no-repeat;
+.slider li svg circle,
+.slider li svg path {
+  transition: fill .5s;
 }
 
-.slider .right div.highlighted {
-  background: url(images/woman_orange.svg) no-repeat;
+.slider .left div.highlighted circle,
+.slider .left div.highlighted path {
+  fill: #C0262C;
+}
+
+.slider .right div.highlighted circle,
+.slider .right div.highlighted path {
+  fill: #FAAE1F;
 }
 
 .action {
@@ -397,16 +423,35 @@ svg#svg8532 {
   z-index: 5;
   bottom: 0;
   font-family: 'Open Sans';
-  font-size: 60px;
+  font-size: 35px;
   font-weight: bold;
 }
 
 .left-number {
-  left: 22%;
+  left: 0;
   color: #C0262C;
 }
 
 .right-number {
-  left: 88%;
+  left: calc(100% - 48px);
   color: #FAAE1F;
+}
+
+@media (max-width: 1000px) {
+  .slider {
+    flex-wrap: wrap;
+  }
+  
+  #atlo .slider ul {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+
+  #atlo .percentage.left-number {
+    bottom: 54%;
+  }
+
+  #atlo .percentage.right-number {
+    bottom: 4%;
+  }
 }
