--- a/style2.css
+++ b/style2.css
@@ -510,11 +510,15 @@ text.text.active {
   }
 } */
 
-.not-affected {
+.not-affected,
+.right,
+.right-2 {
   stroke: #00adef !important;
 }
 
-.affected {
+.affected,
+.left,
+.left-2 {
   stroke: #faaf16 !important;
 }
 
@@ -650,9 +654,9 @@ text.text.active {
   position: relative;
   z-index: 1;
   position: relative;
-  width: 57.4595%;
-  left: 20.5%;
-  margin-top: 9%;
+  width: 50.2753%;
+  left: 22%;
+  margin-top: 7.5%;
 }
 
 #page-3 {
