--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ body {
   position: absolute;
   z-index: 6;
   top: 100%;
-  left: 32%;
+  left: -9999px;
   -webkit-box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
   -moz-box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
   box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
@@ -360,6 +360,7 @@ body {
 
 #atlo .tooltip.active {
   top: 62%;
+  left: 32%;
 }
 
 #atlo .tooltip:before {
@@ -381,6 +382,11 @@ body {
 #atlo .tooltip.active {
   opacity: 1;
 }
+
+#atlo .tooltip.active.right:before {
+  left: calc(90% - 30px);
+}
+
 #atlo .tooltip-button {
   width: 50px;
   height: 50px;
