--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-/* @import url('https://fonts.googleapis.com/css?family=Merriweather:700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=Merriweather:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 @font-face {
   font-family: 'Myriad Pro';
