--- a/style.css
+++ b/style.css
@@ -657,18 +657,18 @@ text.text.active {
   position: absolute;
   z-index: 9;
   left: 0;
-  width: 300px;
   background: white;
   -webkit-box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
   -moz-box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
   box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
   opacity: 0;
-  padding: 10px 15px;
+  padding: 10px;
   transition: opacity .3s;
 }
 
 #atlo .map-tooltip p {
   margin-bottom: 0;
+  font-size: 17px;
 }
 
 
