--- a/style.css
+++ b/style.css
@@ -539,7 +539,7 @@ body {
 #atlo .percentage {
   position: absolute;
   z-index: 5;
-  bottom: 10px;
+  bottom: 53%;
   font-family: 'Open Sans';
   font-size: 35px;
   font-weight: bold;
@@ -550,7 +550,7 @@ body {
 }
 
 .right-number {
-  left: calc(100% - 42px);
+  right: 0;
   color: #00adef;
 }
 
