--- a/style.css
+++ b/style.css
@@ -901,20 +901,28 @@ text.text.active {
   margin-bottom: 5px;
 }
 
-#atlo .menu li button {
+#atlo .menu li a {
+  display: block;
   width: 250px;
   height: 30px;
+  background: none;
+  border: 0;
+  border-radius: 0;
+  cursor: pointer;
   line-height: 30px;
   list-style: none;
   text-align: right;
   color: white;
+  font-size: 14.5px;
   font-weight: bold;
+  padding: 0 8px;
   transition: all .3s;
+  text-decoration: none;
 }
 
-#atlo .menu li button:hover {
+#atlo .menu li a:hover {
   height: 45px;
-  font-size: 17px;
+  font-size: 16px;
   line-height: 45px;
 }
 
